--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "js-koa-pug": "^1.0.3",
     "koa": "^2.1.0",
+    "koa-bodyparser": "^4.1.0",
+    "koa-convert": "^1.2.0",
     "koa-router": "^7.0.1",
+    "koa-session": "^5.0.0",
     "mysql2": "^1.2.0"
   }
 }
