--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-convert": "^1.2.0",
     "koa-router": "^7.0.1",
     "koa-session": "^5.0.0",
+    "koa-static": "^3.0.0",
     "mysql2": "^1.2.0"
   }
 }
