--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "koa-static": "^3.0.0",
     "mysql2": "^1.2.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router-redux": "^5.0.0-alpha.3",
+    "redux": "^3.6.0",
+    "redux-actions": "^2.0.1",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-preset-latest": "^6.24.0",
@@ -32,7 +37,8 @@
   },
   "babel": {
     "presets": [
-      "react", "latest"
+      "react",
+      "latest"
     ]
   }
 }
