--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "js-koa-pug": "^1.0.3",
     "koa": "^2.1.0",
     "koa-bodyparser": "^4.1.0",
