--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-redux": "^5.0.0-alpha.3",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.1",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "superagent": "^3.5.1"
   },
   "devDependencies": {
     "babel-preset-latest": "^6.24.0",
