--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "mysql2": "^1.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-markdown": "^2.4.6",
     "react-redux": "^5.0.3",
     "react-router-redux": "^5.0.0-alpha.4",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.1",
+    "redux-form": "^6.6.0",
     "redux-promise": "^0.5.3",
     "superagent": "^3.5.1"
   },
