--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-session": "^5.0.0",
     "koa-static": "^3.0.0",
     "mysql2": "^1.2.0",
+    "prop-types": "^15.5.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-markdown": "^2.4.6",
